--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             </section>
 
             <section id="global-cases" class="mb-16">
-                <h2 class="text-3xl font-bold text-center mb-12 text-[#194A8A]">타 글로벌 게임사 신작 승인 프로세스</h2>
+                <h2 class="text-3xl font-bold text-center mb-12 text-[#194A8A]">(참고) 타 글로벌 게임사 신작 승인 프로세스</h2>
                 <p class="max-w-3xl mx-auto text-center text-gray-600 mb-12">
                     다양한 글로벌 게임사들은 각자의 철학을 담아 신작을 개발하고 승인하는 독특한 과정을 거칩니다. 이들의 프로세스를 통해 네오위즈 프로세스 개선에 대한 시사점을 얻을 수 있습니다.
                 </p>
